# visumtransfer

./: README.md
visumtransfer/: pyproject.toml  requirements.txt  setup.cfg  setup.py
visumtransfer/src/visumtransfer/: .gitignore  _version.py  attribute.xlsx  attributes.h5  attributes.parquet  params.py  relations.parquet  tables.parquet  visum_attributes.py  visum_demand.py  visum_table.py  visum_tables.py  visum_user.py  wingdbstub.py  write_header.py
visumtransfer/src/visumtransfer/tests/: test_transfer.py
visumtransfer/src/visumtransfer/visum_tables/: __init__.py  activities.py  base.py  basis.py  demand.py  demandstratum.py  ganglinien.py  matrices.py  matrizen.py  nachfrageschicht.py  network.py  netz.py  ov.py  persongroups.py  put.py  timeseries.py  usertables.py
