[build-system]
requires = [
    "setuptools >= 61.0",

]
build-backend = "setuptools.build_meta"

[project]
name = "visumtransfer"
license = {text = "GPL-2.0 AND BSD-3-Clause"}
dynamic = ["version"]

dependencies = [
    'pandas',
    'xarray',
    'openpyxl',
    'recordclass',
    'pytest',
]

description = "tool to create .tra-files for PTV-Visum"
maintainers = [
    { name = "Max Bohnet", email = "bohnet@ggr-planung.de" },
]
requires-python = ">=3.7"

[tool.setuptools.dynamic]
version = {attr = "visumtransfer.__version__"}

[tool.setuptools.package-data]
'visumtransfer' = ['attributes.h5']
